--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Bharath Reddy</h1>
     <h1>Computer Science</h1>
+    <ul><!--Unordered List-->
+        <li>Java</li>
+        <li>Python</li>
+    </ul>
 </body>
 </html>
